--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/libcsp"]
 	path = external/libcsp
 	url = git://github.com/GomSpace/libcsp
+[submodule "external/poky"]
+	path = external/poky
+	url = git://git.yoctoproject.org/poky
