--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/poky"]
 	path = external/poky
 	url = git://git.yoctoproject.org/poky
+[submodule "external/sage"]
+	path = external/sage
+	url = git://github.com/sagemath/sage.git
